--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
           <h1 class="main-section-title">
             Effective Solutions for Your Business
           </h1>
-          <button class="order-button" type="button">Order Service</button>
+          <button class="order-button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <section class="section features-section">
@@ -465,7 +467,103 @@
             </li>
           </ul>
         </div>
+        <div class="container-subscribe">
+          <p class="subscribe-text">Subscribe</p>
+          <form
+            class="subscribe-form"
+            name="subscribe"
+            autocomplete="on"
+            novalidate
+          >
+            <label class="form-label">
+              <input
+                class="form-input"
+                type="email"
+                name="email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="subscribe-button">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-subscribe"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop is-open" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-form-field">
+            <label class="modal-label" for="name">Name</label>
+            <div class="input-wrapper">
+              <input
+                class="modal-input"
+                type="text"
+                name="YourName"
+                id="name"
+                autofocus
+              />
+              <svg class="person-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+            <label class="modal-label" for="phone">Phone</label>
+            <div class="input-wrapper">
+              <input class="modal-input" type="tel" name="YourTel" id="phone" />
+              <svg class="phone-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+            <label class="modal-label" for="email">Email</label>
+            <div class="input-wrapper">
+              <input
+                class="modal-input"
+                type="email"
+                name="YourEmail"
+                id="email"
+              />
+              <svg class="email-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+            <label class="modal-label">
+              Comment
+              <textarea
+                class="comment-area"
+                rows="3"
+                placeholder="Text input"
+              ></textarea>
+            </label>
+            <input
+              class="policy-checkbox visually-hidden"
+              type="checkbox"
+              id="policy"
+              name="PrivacyPolicy"
+              value="true"
+            />
+            <label class="policy-label" for="policy">
+              <span class="custom-checkbox">
+                <svg class="policy-icon" width="10" height="7">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="policy-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="modal-send-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
