--- a/index.html
+++ b/index.html
@@ -503,19 +503,21 @@
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <div class="modal-form-field">
-            <label class="modal-label" for="name">Name</label>
+            <label class="modal-label" for="user-name">Name</label>
             <div class="input-wrapper">
               <input
                 class="modal-input"
                 type="text"
-                name="YourName"
-                id="name"
+                name="user-name"
+                id="user-name"
                 autofocus
               />
               <svg class="person-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
+          </div>
+          <div class="modal-form-field">
             <label class="modal-label" for="phone">Phone</label>
             <div class="input-wrapper">
               <input class="modal-input" type="tel" name="YourTel" id="phone" />
@@ -523,6 +525,8 @@
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
+          </div>
+          <div class="modal-form-field">
             <label class="modal-label" for="email">Email</label>
             <div class="input-wrapper">
               <input
@@ -535,24 +539,26 @@
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
-            <label class="modal-label">
-              Comment
-              <textarea
-                class="comment-area"
-                rows="3"
-                placeholder="Text input"
-              ></textarea>
-            </label>
+          </div>
+          <div class="modal-form-field">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="comment-area"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="checkbox">
             <input
               class="policy-checkbox visually-hidden"
               type="checkbox"
-              id="policy"
-              name="PrivacyPolicy"
+              id="user-privacy"
+              name="user-privacy"
               value="true"
             />
-            <label class="policy-label" for="policy">
+            <label class="policy-label" for="user-privacy">
               <span class="custom-checkbox">
-                <svg class="policy-icon" width="10" height="7">
+                <svg class="policy-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-checkbox"></use>
                 </svg>
               </span>
