--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                 id="user-name"
                 autofocus
               />
-              <svg class="person-icon" width="18" height="24">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -521,7 +521,7 @@
             <label class="modal-label" for="phone">Phone</label>
             <div class="input-wrapper">
               <input class="modal-input" type="tel" name="YourTel" id="phone" />
-              <svg class="phone-icon" width="18" height="24">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
@@ -535,7 +535,7 @@
                 name="YourEmail"
                 id="email"
               />
-              <svg class="email-icon" width="18" height="24">
+              <svg class="form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -545,6 +545,7 @@
             <textarea
               class="comment-area"
               id="user-comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
