--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
+          <div class="textarea">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="comment-area"
